--- a/tex/main.tex
+++ b/tex/main.tex
@@ -18,7 +18,7 @@
 
 \title{Statistical Physics}
 \subtitle{Homework, Sheet 7}
-\author{Daniel Scheiermann --- 3227680 \\ Felix Springer --- 10002537 \\ Hinnerk}
+\author{Daniel Scheiermann --- 3227680 \\ Felix Springer --- 10002537 \\ Hinnerk --- 10002310}
 \date{\today}
 
 \begin{document}
