added comments and critical temp

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -30,6 +30,10 @@ If you have trouble understanding the program we would be happy to explain it, y
 \section{The Ising model [H13]}
 We are using Python 3 for our solution. The mainly used modules are ''matplotlib'' and ''numpy''.
 
+\begin{align}
+	\tau_c \approx 10 \notag
+\end{align}
+
 \section{Thermodynamics of a chain [H7]}
 In my solution I am using the approach that is shown in the hints.
 I am calculating the probability density $P$ in form of a histogram and then try to derive the force $F$ directly from there.
