--- a/tex/main.tex
+++ b/tex/main.tex
@@ -29,56 +29,31 @@ If you have trouble understanding the program we would be happy to explain it, y
 
 \section{The Ising model [H13]}
 We are using Python 3 for our solution. The mainly used modules are ''matplotlib'' and ''numpy''.
+In order to understand what our program actually does it's best to start by looking in \textit{main.py} since most of the work is done here.
 
 \begin{align}
 	\tau_c \approx 10 \notag
 \end{align}
 
-\section{Thermodynamics of a chain [H7]}
-In my solution I am using the approach that is shown in the hints.
-I am calculating the probability density $P$ in form of a histogram and then try to derive the force $F$ directly from there.
+\section{main.py}
+The whole file pretty much consists of only one \textit{class} called \textit{grid}. The idea is to have all defining information of the grid in one place and beeing able to change it effortlessly. 
 
-\subsection{Theoretical background}
-First I use the relation (\ref{eq:F1}) of force $F$ and pressure $p$, in which I then insert the free Energy $E$, which leads to the partition function $Z$.
-\begin{align}
-	F &= \int - p \text{ d}A \label{eq:F1} \\
-	&= - \int \underbrace{- \left( \frac{\partial E}{\partial V} \right)_{\tau}}_{= p} \text{d}A \notag \\
-	&= \int \partial_V \underbrace{(- \tau \ln(Z))}_{= E} \text{ d}A \notag \\
-	&= - \tau \int \partial_V \ln(Z) \text{ d}A \notag \\
-	F &= - \tau \text{ } \partial_L \ln(Z) \label{eq:F2}
-\end{align}
+\subsection{\_\_init\_\_()}
+This function is called when initalizing an object of this class. The function takes the dimensions of the grid as parameters. \\
+The first grid data is created randomly using the numpy module. Also there are some variables set to their start value.
 
-Now with equation (\ref{eq:F2}) I only need to be able to calculate the partition function $Z$.
-In this case there is a relation (\ref{eq:P1}) to the probability density $P$.
-\begin{align}
-	P &= \frac{1}{Z} \underbrace{\exp \left( {\frac{\mu N_\nu - \epsilon_\nu}{\tau}} \right)}_{\eqqcolon \alpha} \label{eq:P1} \\
-	\implies \text{ } Z &= \frac{\alpha}{P} \label{eq:Z1}
-\end{align}
+\subsection{print\_settings()}
+This function prints the dimensions of the grid and also the current values of each element.
 
-The reason for $\partial_L \alpha = 0$ is, that due to the thermal equilibrium the energy $\epsilon_\nu$ stays constant for different $L$. $N_\nu$ is also constant for each probability density $P$, and $\mu$ and $\tau$ are definetely constant here.
+\subsection{update()}
+Here the metroplis algorithm comes to use and calculates new values for the grid.
 
-Now I can use equation (\ref{eq:Z1}) to further simplify equation (\ref{eq:F2}).
-\begin{align}
-	F &= - \tau \partial_L \ln \left( \frac{\alpha}{P} \right) \notag \\
-	&= - \tau ( \underbrace{\partial_L \ln(\alpha)}_{= 0} - \partial_L \ln(P) ) \notag \\
-	F &= \tau \text{ } \partial_L \ln(P) \label{eq:F3}
-\end{align}
+\subsection{make\_plot()}
+By using \textit{matplotlib.pyplot} and \textit{matplotlib.animation} a plot of the grid is created. Or a little more precie: We used \textit{matshow()} in order to visualize our data for one single grid but also used \textit{FuncAnimation} so that we could create an actual animation of changing data. \\
+Also a Slider for the temperature and the animation speed is created.
 
-With equation (\ref{eq:F3}) I can directly compute the force $F$ from the probability density $P(L)$ which I am simulating with a distribution of ''randomwalks''.
 
-\subsection{Result}
-The end result of the computation can be found in Figure \ref{fig:1}.
 
-%\begin{figure}[ht]
-%	\centering
-%	\includegraphics[scale=0.65]{../out/plot-L-force.png}
-%	\caption{Plot of the calculated force $F$ in relation to the distance $L$}
-%	\label{fig:1}
-%\end{figure}
 
-To look into the details of the computation check out \texttt{calc-force.ss}. It is executed with ''Chez-Scheme 9.5.1''.
-The plot is created with ''gnuplot'' in \texttt{plot-L-force.gp}.
-
-To completely execute everything there is \texttt{main.sh}.
 
 \end{document}
